三子棋游戏

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "Escape_Character.C": "cpp",
-        "Two-Dimension.C": "cpp"
+        "Two-Dimension.C": "cpp",
+        "random": "c"
     }
 }
